compiler/tests/fixtures/invalid/semantics/reaction_location_duplicate_value.viv
// Invalid: reaction location has duplicate value

reserved action respond:
    roles:
        @responder:
            as: initiator

action trigger:
    roles:
        @actor:
            as: initiator
    reactions:
        queue action respond:
            with:
                @responder: @actor
            location:
                any: @actor.home, @actor.home
